--- a/index.html
+++ b/index.html
@@ -5,33 +5,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="dist/style.css">
   <title>Frontend Mentor | Order summary card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Order Summary
+  <div class="container">
+    <div class="card">
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+      <div class="card-header">
+        <img src="./images/illustration-hero.svg" alt="illustration-hero" class="card-hero">
+      </div>
 
-  Annual Plan
-  $59.99/year
+      <div class="card-body">
+        <h2>Order Summary</h2>
+        <p>
+          You can now listen to lions of songs, audiobooks, and podcasts on any device anywhere you like!
+        </p>
+        <div class="badge">
+          <img src="./images/icon-music.svg" alt="icon-music" class="badge-icon">
+          <div class="badge-description">
+            <h4 class="badge-description--title">Annual Plan</h4>
+            <span class="badge-description--price">$59.99/year</span>
+          </div>
+          <a href="#" class="badge-change">Change</a>
+        </div>
+      </div>
 
-  Change
+      <div class="card-footer">
+        <button class="btn btn__confirm">Proceed to Payment</button>
+        <button class="btn btn__cancel">Cancel Order</button>
+      </div>
 
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    </div>
   </div>
+
 </body>
 </html>
